2009-12-22  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Added changePosition XML-RPC method. It takes 3 parameters: gid,
	pos and how.  This method changes the position of download denoted
	by gid.  If how is POS_SET, it moves the download to a position
	relative to the beginning of the queue.  If how is POS_CUR, it
	moves the download to a position relative to the current
	position. If how is POS_END, it moves the download to a position
	relative to the end of the queue. If the destination position is
	less than 0 or beyond the end of the queue, it moves the download
	to the beginning or the end of the queue respectively.  Returns
	the destination position.
	* src/RequestGroupMan.cc
	* src/RequestGroupMan.h
	* src/XmlRpcMethodFactory.cc
	* src/XmlRpcMethodImpl.cc
	* src/XmlRpcMethodImpl.h
	* test/RequestGroupManTest.cc
	* test/XmlRpcMethodTest.cc

2009-12-20  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Added getOption and getGlobalOption to aria2rpc.
	* doc/xmlrpc/aria2rpc

2009-12-20  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Documented getOption and getGlobalOption XML-RPC method in man
	page
	* doc/aria2c.1.txt

2009-12-20  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Added getOption and getGlobalOption XML-RPC method.  getOption
	takes GID as a parameter and returns its options as struct.
	getGlobalOption takes no parameter and returns global
	options. Because global option is used as a template for the
	option of newly added downloads, it includes options returned by
	getOption.
	* src/Option.h
	* src/XmlRpcMethodFactory.cc
	* src/XmlRpcMethodImpl.cc
	* src/XmlRpcMethodImpl.h

2009-12-20  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Sort _optionHandlers in OptionParser by name in ascending order.
	Use vector instead of deque for efficiency.
	* src/OptionHandler.h
	* src/OptionHandlerFactory.h
	* src/OptionParser.cc
	* src/OptionParser.h
	* src/version_usage.cc
	* test/OptionParserTest.cc
